--- a/views/events/index.html
+++ b/views/events/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=show, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>All Event</title>
+    <title>All Events</title>
 </head>
 <body>
-    <h1>All Events</h1>
   <div>
     {{#eventlist}}
-    <p>here is a list of all the events {{title}}</p>
-    {{/evnetlist}}
+    <p>{{title}}</p>
+    {{/eventlist}}
   </div>
 </body>
 </html>
