--- a/views/events/show.html
+++ b/views/events/show.html
@@ -14,7 +14,7 @@
         <p>{{date}}</p>
         <p>{{start_time}}</p>
         <p>{{end_time}}</p>
-        <p> // of guests </p>
+        <!-- <p> // of guests </p> -->
 
     {{/eventlist}}
     </div>
