--- a/views/guests/show.html
+++ b/views/guests/show.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         {{#guestlist}}
-        <p>Complete list of registred users {{guest}}</p>
+        <p>Complete list of registred users {{name}}</p>
 
         {{/guestlist}}
     </div>
