--- a/views/guests/show.html
+++ b/views/guests/show.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Guests</title>
+    <title>Guest {{guests.id}}</title>
 </head>
 <body>
     <div>
-        {{#guestlist}}
-        <p>Complete list of registred users {{name}}</p>
 
-        {{/guestlist}}
     </div>
-    
 </body>
 </html>
