--- a/views/index.html
+++ b/views/index.html
@@ -9,5 +9,7 @@
 <body>
     <H1>Welcome</H1>
     <p>God is My Judge</p>
+    <a href="/guests">see all guests</a>
+    <a href="/events">see all the events</a>
 </body>
 </html>
