--- a/views/events/show.html
+++ b/views/events/show.html
@@ -1,22 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Event No. {{event.id}}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
 <body>
-    <div>
-    {{#event}}
-        <p>{{title}}</p>
-        <!-- <p>{{location}}</p>
-        <p>{{date}}</p>
-        <p>{{start_time}}</p>
-        <p>{{end_time}}</p> -->
-        <!-- <p> // of guests </p> -->
-
-    {{/event}}
-    </div>
+  <a href="/events">go back to all events</a>
+  <h1>Event</h1>
+  <h1>{{event.name}}</h1>
+  <p>{{event.location}}</p>
+  {{#userAttendance}}
+    <form action="/events/{{event.id}}/register?_method=DELETE" method="post">
+      <button type="submit">de-register</button>
+    </form>
+  {{/userAttendance}}
+  {{^userAttendance}}
+    <form action="/events/{{event.id}}/register" method="post">
+      <button type="submit">register</button>
+    </form>
+  {{/userAttendance}}
 </body>
-</html>
+</html> 
