--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <H1>Welcome</H1>
-    <p>God is My Judge</p>
-    <a href="/guests">see all guests</a>
-    <a href="/events">see all the events</a>
+    <h2>Welcome to RSVP webapp</h2>
+    <a href="/guests">see all Guests</a>
+    <a href="/events">see all the Events</a>
 </body>
 </html>
